--- a/index.html
+++ b/index.html
@@ -1,328 +1,71 @@
+<!doctype html>
 <html>
-<head><title>Jiong Zhao's Home Page - Resume </title></head>
-
-<body text=#000000 vLink=#551a8b aLink=#ff0000 link=#0000ee bgColor=#ffffff>
-
-<table border="0" width="560">
-  <tr>
-
-    <td width="150"><img src="myphotosmall.jpg" height=175 width=120 align=left border=0></td>
-
-    <td>
-      <h2 align=left>Jiong Zhao</h2>
-      <b>Senior Engineer Staff Member<br>
-      <a href="http://www.tongji.edu.cn">TongJi University</a>, Shanghai China<br>
-      250 ZhenJin Rd / Rm. 202 / Bldg. 24<br>
-      Shanghai 200333<br></b>
-      <i>Phone</i>: (8621) 5103-0184 (O)<br>
-      <i>Fax  </i>: (8621) 5103-0244<br>
-      <i>Email</i>: <a href="mailto:gohigh@sh163.net"><u>gohigh@sh163.net</u></a><br>(Original gohigh@shtdu.edu.cn)
-    </td>
-  </tr>
-</table>
-
-<!---------------------------------------->
-<hr>
-  <p>Welcome to my personal homepage! or mainly as a resume.<br>
- I am a Senior Engineer Staff Member at
-  <a href="http://www.tongji.edu.cn/">Tongji University</a>, Shanghai China. 
-  I graduated in August 2002 with a Ph.D. from the 
-  Research Institute of Traffic Information Engineering & Control at
-  <a href="http://www.tongji.edu.cn/">Tongji University</a> supervised by Prof. Shujing Zhang.
-  The thesis title is "Research on Analytical Models of TCP Congestion Control".
-  I am now teaching the courses of 
-  <a href="http://www.plinux.org/comcon/">'Computer Networks & Control Technology'</a>, 
-  'Computer Control Technology' and 'Modern Electronics'.</p>
-
-<!-------------------------------------------->
-<hr><h3><b><font face="Times New Roman,Times">EDUCATION</font></b></h3>
-<ul>
- <li>Ph.D. in Computer Networks, TongJi University, August 2002. <br>
- Research Advisor: Prof. Shujing Zhang</li>
- <li>M.S. in Computer Applications, Shanghai Institute of Railway Technology, July 1988. <br>
- Research Advisor: Prof. Runsheng Miao</li>
- <li>B.S. in Telecommunication Department, Shanghai Institute of Railway Technology, July 1985.<br></li>
-</ul>
-
-<!-------------------------------------------->
-<hr><h3><b><font face="Times New Roman,Times">RESEARCH INTERESTS</font></b></h3>
-  <ul>
-    <li>Network measurement </li>
-    <li>Traffic modeling and statistical inference </li>
-    <li>Congestion control, TCP </li>
-    <li><a href="http://www.plinux.org/">Linux Operating System</a></li>
-    <li>System Software </li>
-  </ul>
+<head>
+<title>个人主页</title>
+<link href="style.css" rel="stylesheet"  type="text/css" />
 
 
-<!-------------------------------------------->
-<hr><h3><b><font face="Times New Roman,Times">PROJECTS</font></b></h3>
-<ul>
-  <li>Shanghai gear factory, Automated AS/RS system. <i>(Finished)</i></li>
-  <li>Shanghai SanLin Elvator Co. ltd., Automated AS/RS system. <i>(Finished)</i></li>
-  <li>NanCang Railway Bureau, Automated AS/RS system. <i>(Finished)</i></li>
-  <li>Shanghai Education Bureau important subject funds projcet (B991701), 
-    Research on Multimedia Scheduling Comminication in 
-    Shanghai Intelligent Traffic System. <i>(Finished)</i></li>
-  <li>Engineering Course funds projects (2003)
-    Design and Implementation of the Interface between ERP and AS/RS. <i>(Ongoing)</i></li>
-  <li>National Education Bureau backbone teachers funds project (Ed/Tech.[2000]143)
-    Intelligent Controll Technology in AS/RS System. <i>(Ongoing)</i></li>
-  <li>National Natural science most important funds porjects (90207021)
-    Research on System On Chip (SOC) Online Test and Reliability. <i>(Ongoing)</i></li>
-</ul>
-
-<!-------------------------------------------->
-<hr><h3><b><font face="Times New Roman,Times">CONFERENCES</font></b></h3>
-<ul>
-  <li>Jiong Zhao, Shujing Zhang, Qigang Zhou, 
-    <a href="cqr2002.ps.tgz">
-    An Adapted Model of TCP Steady State Throughput</a>, 
-    Proc. of 16th International Workshop on Communications Quality & Reliability (CQR2002),
-    Okinawa, Japan, May 2002.
-    (<a href="cqr2002.pdf">PDF</a>)</li>
-  <li>Jiong Zhao, Shujing Zhang, Qigang Zhou,
-    <a href="ict2002.ps.tgz">
-    Performance Analysis of TCP Stationary Throughput</a>,
-    IEEE International Conference On Telecommunications (ICT2002),
-    Beijing, China, June 2002.
-    (<a href="ict2002.pdf">PDF</a>)</li>
-  <li>Jiong Zhao, Shujing Zhang, Qigang Zhou,
-    <a href="hsnmc2002.ps.tgz">
-    An Adapted Model of TCP Steady State Throughput and its Performance Analysis</a>,
-    Proceedings of IEEE 5th International Conference on High Speed and Multimedia Communications, 
-    Korea, July 2002.
-    (<a href="hsnmc2002.pdf">PDF</a>)</li>
-  <li>Jiong Zhao, Shujing Zhang, Qigang Zhou,
-    <a href="tencon200201.ps.tgz">
-    An Adapted Full Model for TCP Latency</a>,
-    Proc. of IEEE 17th International Conference on Computers, Communications, Control and Power Engineering, 
-    Beijing, China, Oct. 2002.
-    (<a href="tencon200201.pdf">PDF</a>)</li>
-  <li>Jiong Zhao, Shujing Zhang, 
-    <a href="tencon200202.ps.tgz">
-    Network-based Dynamic Visual Man-on-board Order-Picking Method in AS/RS</a>,
-    Proc. of IEEE 17th International Conference on Computers, Communications, Control and Power Engineering, 
-    Beijing, China, Oct. 2002.
-    (<a href="tencon200202.pdf">PDF</a>)</li>
-  <li>Jiong Zhao, Shujing Zhang, Qigang Zhou,
-    <a href="spects2002.ps.tgz">
-    The Effects of Slow Start Period to TCP Stationary Behavior</a>,
-    Proc. of the 2002 International Symposium on Performance Evaluation of Computer and Telecommunication Systems, (SPECTS2002) 
-    San Diego, USA July 2002.
-    (<a href="spects2002.pdf">PDF</a>)</li>   
-  <li>Jiong Zhao, Shujing Zhang, Qigang Zhou,
-    <a href="apcc2002.ps.tgz">
-    An Adapted Full Model for TCP Latency</a>,
-    Asia-Pacific Conference on Communications(APCC2002), 
-    Bandung, Indonesia. Sept. 2002
-    (<a href="apcc2002.pdf">PDF</a>)</li>
-  <li>Jiong Zhao, Shujing Zhang, Qigang Zhou,
-    <a href="youth2002.ps.tgz">
-    The Modeling of Short TCP flows Latency.</a> (In Chinese),
-    The 7th National youth Communication Conference,
-    Si Chuan, China, Nov. 2002
-    (<a href="youth2002.pdf">PDF</a>)</li>
-  <li>Zhibin Zhao, Jiong Zhao, Qigang Zhou,
-    A Microcomputer-Controlled Measurement System of Exchange Protect Unit,
-    Proc. of 2nd International Symposium on Test and Measurement(ISTM97),
-    Beijing, China, June 1997.
-</ul>
-
-<!-------------------------------------------->
-<hr><h3><b><font face="Times New Roman,Times">JOURNALS & MAGAZINES</font></b></h3>
-<ul>
-  <li>Jiong Zhao, ShuJiong Zhang.
-    <a href-"tongji2004.ps.tgz">
-    Research on Analytical Models of TCP Congestion Control</a> (In Chinese),
-    Vol.32, No.6, Jun. 2004
-    (<a href="tongji2004.pdf">PDF</a>)</li>
-  <li>Jiong Zhao, Xiaolei Xiong, Qicai Zhou,
-    <a href="journal2004.ps.tgz">
-    Reverse Engineering of the Serial Data Transfer Protocols</a> (In Chinese),
-    Computer Engineering,
-    Vol.30, No.9, May. 2004
-    (<a href="compeng2004.pdf">PDF</a>)</li>
-  <li>Jiong Zhao, Shujing Zhang, Qigang Zhou,
-    <a href="journal2003.ps.tgz">
-    An Adapted Model of TCP Steady State Throughput and its Performance Analysis</a> (In Chinese),
-    Journal of China Institute of Communications, 
-    Vol.24 No.1 2003.
-    (<a href="journal2003.pdf">PDF</a>)</li>
-  <li>Jiong Zhao, Jingsong Xue,
-    <a href="infoctrl2003.ps.tgz">
-    Control Unit Based Path Finding and Scheduling System</a> (In Chinese),
-    Journal of Information and Control, 
-    Vol.20 No.1 2003.
-    (<a href="infoctrl2003.pdf">PDF</a>)</li>
-  <li>Jiong Zhao, Shujing Zhang, Qigang Zhou,
-    <a href="compeng2003.ps.tgz">
-    The Modelling of TCP Slow Start Period</a> (In Chinese),
-    Computer Engineering,
-    Vol.29, No.8, May. 2003.
-    (<a href="compeng2003.pdf">PDF</a>)</li>
-  <li>Jiong Zhao, Shujing Zhang, Qigang Zhou,
-    A Simple Model of TCP Latency,
-    Journal of Beijing University of Posts and Telecommunications,
-    Vol.26 2003.6
-  <li>Jiong Zhao, Shujing Zhang, Qigang Zhou,
-    <a href="commtech2002.ps.tgz">
-    The Effects of Slow Start Periods to the Throughput of TCP Steady State</a> (In Chinese),
-    Communications Technology,
-    No.9, 2002.
-    (<a href="commtech2002.pdf">PDF</a>)</li>
-  <li>Jiong Zhao, Xiaolei Xiong, Qicai Zhou,
-    <a href="compeng2002.ps.tgz">
-    Communication Protocol Design and Programming in Control System</a> (In Chinese),
-    Computer Engineering,
-    Vol.28, No.8, Aug. 2002.
-    (<a href="compeng2002.pdf">PDF</a>)</li>
-  <li>Jiong Zhao, Xiaolei Xiong, Qicai Zhou,
-    <a href="manuauto200209.ps.tgz">
-    Industry Control Network Protocol Design and its Implementation in AS/RS</a> (In Chinese),
-    Manufacturing Automation,
-    Vol.24, No.9, 2002.
-    (<a href="manuauto200209.pdf">PDF</a>)</li>
-  <li>Jiong Zhao, Shujing Zhang, Xiaolei Xiong, Qicai Zhou,
-    <a href="railjournal.ps.tgz">
-    A Network-based Visual Order-Picking Scenario And Its Performance Analyses in AS/RS</a> (In Chinese),
-    Journal of The China Railway Society,
-    Vol.24, No.2, April 2002.
-    (<a href="railjournal.pdf">PDF</a>)</li>
-  <li>Jiong Zhao, Xiaolei Xiong, Zhiwen Liang,
-    <a href="railapps.ps.tgz">
-    Research on the Schemes of Networking & Sharing Information for Testing Devices</a> (In Chinese),
-    Railway Computer Application,
-    Vol.10, No.10, 2002.
-    (<a href="railapps.pdf">PDF</a>)</li>
-  <li>Jiong Zhao, Xiaolei Xiong, Qicai Zhou,
-    <a href="compapps.ps.tgz">
-    The Management and Control Methods for Automatic Deliver Center</a> (In Chinese),
-    Computer Applications,
-    No.12 2002.
-    (<a href="compapps.pdf">PDF</a>)</li>
-  <li>Jiong Zhao, Shujing Zhang, Xiaolei Xiong, Qicai Zhou,
-    <a href="tongji2002.ps.tgz">
-    Warehouse Management Algorithm Based on State-diagram and Database Technigues in Automated Storage and Retrieval System</a> (In Chinese),
-    Journal of TongJi University,
-    Vol.30, No.4, Apr. 2002.
-    (<a href="tongji2002.pdf">PDF</a>)</li>
-  <li>Jiong Zhao, Chenglin Weng, Qicai Zhou,
-    <a href="tiedao98.ps.tgz">
-    Determing and Applying Dynamic Optima Dwell Point Location of Narrow-aisle Stacker Crane in Highrise Warehouse</a> (In Chinese),
-    Journal of Shanghai TieDao University,
-    Vol.19, No.3.4, Apr. 1998
-    (<a href="tiedao98.pdf">PDF</a>)</li>
-  <li>Jiong Zhao, Shujing Zhang, Xiaolei Xiong,
-    A Network-based Man-on-board Visual Order-picking Method with Performance Analysis in AS/RS.
-    Manufacturing Automation,
-    Vol.23, No.12, 2001.</li>
-  <li>Jiong Zhao, Chenglin Weng, Jianping Lou, Xiaolei Xiong,
-    <a href="rs485.ps.tgz">
-    The Design Method of RS-485 in Industry Control Networks</a> (In Chinese),
-    Computer Engineering,
-    No.1(Add), 1998.
-    (<a href="rs485.pdf">PDF</a>)</li>
-  <li>Xiaolei Xiong, Jiong Zhao, Qicai Zhou,
-    <a href="hoisting200209.ps.tgz">
-    Research on Abnormality detection and Self-recovery Ability of Automated Storage/Retrieval Machine</a> (In Chinese),
-    Hoisting and Conveying Machinery,
-    No.9, 2002
-    (<a href="hoisting200209.pdf">PDF</a>)</li>
-  <li>Xiaolei Xiong, Jiong Zhao, Qicai Zhou,
-    <a href="manuauto200204.ps.tgz">
-    The Implementation of Management and Control System in AS/RS</a> (In Chinese),
-    Manufacturing Automation,
-    Vol.24, No.4, 2002.
-    (<a href="manuauto200204.pdf">PDF</a>)</li>
-  <li>Qicai Zhou, Jinnuo Wang, Jiong Zhao,
-    Research on the State-Diagram Based Access Methods in AS/RS,
-    Hoisting and Conveying Machinery,
-    No.1, 2002</li>
-  <li>Chenglin Weng, Jiong Zhao, Qicai Zhou,
-    The Design of State Diagram Based Conveying Transfer System,
-    Hoisting and Conveying Machinery,
-    No.10, 1998</li>
-  <li>Chenglin Weng, Jiong Zhao, Qicai Zhou, Chunxiang Wang,
-    The Applications of Automated Store and Retrevial System in FMS,
-    Hoisting and Conveying Machinery,
-    No.6, 1998</li>
-</ul>
-
-<!-------------------------------------------->
-<hr><h3><b><font face="Times New Roman,Times">REPORTS</font></b></h3>
-<ul>
-  <li>Jiong Zhao, Xiaolei Xiong,
-    Management and Control System Based on Control Unit Structure in AS/RS,
-    Report of TongJi University,
-    May 2002</li>
-  <li>Shujing Zhang, Xu Wang, Hu Liu, Jiong Zhao,
-    Research on Multimedia Scheduling Communication System in Shanghai Intelligent Traffic System,
-    Report of TongJi University,
-    Feb. 2002</li>
-</ul>
-
-<!-------------------------------------------->
-<hr><h3><b><font face="Times New Roman,Times">TALKS</font></b></h3>
-<ul>
-  <li>Jiong Zhao,
-    <a href="linux-architecture.ppt">
-    Linux Kernel Architecture</a> (In Chinese),
-    Speeking at TongJi University,
-    May. 2004
-    (<a href="linux-architecture.pdf">PDF</a>)</li>
-  <li>Jiong Zhao,
-    <a href="linux-history.ppt">
-    Five Vital Supports for the Inception & Development of Linux</a> (In Chinese),
-    Speaking at TongJi University,
-    Dec. 2002
-    (<a href="linux-history.pdf">Full Version in PDF</a>)</li>
-</ul>
+<meta charset="utf-8">
+</head>
+<body> 
+<header> 
+  <h1> 
+        个人  <span class="orange"> 的BLOG </span>
+  </h1>
+</header>
 
 
-<!-------------------------------------------->
-<hr><h3><b><font face="Times New Roman,Times">BOOKS</font></b></h3>
-<ul>
-  <li>Jiong Zhao,
-    <a href="linux-architecture.ppt">
-    Linux Kenrel Commentary</a> (In Chinese),
-    China Machine Press,
-    Jul. 2004 (estimated)
-</ul>
-
-<!-------------------------------------------->
-<hr><h3><b><font face="Times New Roman,Times">OTHERS</font></b></h3>
-<ul>
-  <li>Jiong Zhao,
-    <a href="/download/CommentedLinuxKernel/clk011c.zip">
-    A Heavily Commented Linux Kernel Source Code</a>,
-    Dec. 2002
-    (<a href=/download/CommentedLinuxKernel/clk011c.pdf">PDF</a>) Now in Version 1.9.5, 
-    <a href="http://www.oldlinux.org">www.oldlinux.org</a>, May. 2004</li>
-  <li>Jiong Zhao,
-    <a href="tourlinux.ps.tgz">
-    Paper translation: Tour of the Linux Kernel Source</a>,
-    Free on internet for download.
-    July 2000.
-    (<a href="tourlinux.pdf">PDF</a>)</li> 
-  <li>Jiong Zhao, 
-    <a href="netguide.ps.tgz">
-    Book translation: Linux Network Administrator's Guide</a>,
-    Free on internet for download.
-    Jan. 2001
-    (<a href="netguide.pdf">PDF</a>)</li>
-  <li>Jiong Zhao, 
-    <a href="sysguide.ps.tgz">
-    Book translation: Linux System Administrator's Guide</a>,
-    Free on internet for download.
-    Sept. 2000
-    (<a href="sysguide.pdf">PDF</a>)</li>
-</ul>
+<nav>
+      <ul>
+        <li><a href="index.html" class="selected">博客首页 </a> </li>
+        <li><a href="index1.html">关于我 </a></li>
+        <li><a href="index2.html">给我留言 </a></li>
+        <li><a href="index3.html">友情链接 </a></li>
+        <li><a href="index4.html">我的信箱 </a></li>
+        <li><a href="index5.html">社区 </a></li>
+      </ul>
+</nav> 
 
 
-<!------------------------------------------->
-<hr><i>$Id: index.html,v 1.00 2002/12/28 21:33:20 jzhao Exp jiong zhao $</i>
+
+
+<div id="content">
+    <section>
+
+    </section>
+
+
+    <aside>
+        <ul>
+            <li><a href="index1.html" class="selected">日志 </a> </li>
+            <li><a href="index1.html">相册 </a></li>
+            <li><a href="index_personal_homepage.html">个人档案 </a></li>
+            <li><a href="index1.html">分享 </a></li>
+            <li><a href="index1.html">音乐地带 </a></li>
+            <li><a href="index1.html">视频 </a></li>
+            <li><a href="index1.html">更多 </a></li>
+        </ul>
+    </aside> 
+</div>
+
+
+
+
+
+
+<footer>
+        <p>版权朱林斯所有</p>
+        <hr />
+        <small>法律条文</small>
+        <small>联系我们</small>
+        <small>客户意见</small>
+        <small>商户合作</small>
+</footer>
+
+
 </body>
+
+
 </html>
 
 
