--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </HEAD>
 <BODY>
 <CENTER>
-<H1><B><FONT face="Times New Roman, Times">Welcome to Linux-Kernel-0.12 
+<H1><B><FONT face="Times New Roman, Times">Welcome to Linux-Kernel-v0.12 
 </B></H1></CENTER>
 <HR>
 
