--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<LI><A href="http://www.oldlinux.org/Book-Lite/">Book online resources</A>
 	-- Kernel 0.12 source code, all commented in chinese, and with in types of pdf & html. <BR><BR>
         <LI><A 
-        href="index_personal_homepage.html">personal homepage</A> -- 
+        href="personal_homepage.html">personal homepage</A> -- 
         My personal webpage [ Obsoleted ... ]</LI></UL>
       <HR>
 
