--- a/personal_homepage.html
+++ b/personal_homepage.html
@@ -20,11 +20,19 @@
 <hr>
   <p>Welcome to my personal homepage! or mainly as a resume.<br>
  I am a Embedded Software Engineer at
-  <a href="http://www.qdsgv.com/"></a>, BeiJing China. 
+  <a href="http://www.qdsgv.com/">海成慧车</a>, BeiJing China.<br>
   I graduated in July 2015 with a Bachelor Degree from the 
   Communication engineering at
   <a href="http://www.anhui.edu.cn/">AnHui University</a>.</p>
-
+Work experience
+  
+<!-------------------------------------------->
+<hr><h3><b><font face="Times New Roman,Times">JOB EXPERIENCE</font></b></h3>
+<ul>
+ <li><a href="http://www.qdsgv.com/">海成慧车</a>, Nov 2018-Up to now.<br></li>
+ <li><a href="http://www.racobit.com/">理工雷科</a>, July 201５-Oct 2018.<br></li>
+</ul>
+  
 <!-------------------------------------------->
 <hr><h3><b><font face="Times New Roman,Times">EDUCATION</font></b></h3>
 <ul>
