--- a/personal_homepage.html
+++ b/personal_homepage.html
@@ -23,7 +23,7 @@
   <a href="http://www.qdsgv.com/">海成慧车</a>, BeiJing China.<br>
   I graduated in July 2015 with a Bachelor Degree from the 
   Communication engineering at
-  <a href="http://www.anhui.edu.cn/">AnHui University</a>.</p>
+  <a href="http://www.ahu.edu.cn/">AnHui University</a>.</p>
 Work experience
   
 <!-------------------------------------------->
