--- a/personal_homepage.html
+++ b/personal_homepage.html
@@ -20,23 +20,22 @@
 <hr>
   <p>Welcome to my personal homepage! or mainly as a resume.<br>
  I am a Embedded Software Engineer at
-  <a href="http://www.qdsgv.com/">海成慧车</a>, BeiJing China.<br>
+  <a href="http://www.qdsgv.com/">qdsgv</a>, BeiJing China.<br>
   I graduated in July 2015 with a Bachelor Degree from the 
   Communication engineering at
-  <a href="http://www.ahu.edu.cn/">AnHui University</a>.</p>
-Work experience
-  
-<!-------------------------------------------->
-<hr><h3><b><font face="Times New Roman,Times">JOB EXPERIENCE</font></b></h3>
-<ul>
- <li><a href="http://www.qdsgv.com/">海成慧车</a>, Nov 2018-Up to now.<br></li>
- <li><a href="http://www.racobit.com/">理工雷科</a>, July 201５-Oct 2018.<br></li>
-</ul>
+  <a href="http://www.ahu.edu.cn/">Anhui University</a>.</p>
   
 <!-------------------------------------------->
 <hr><h3><b><font face="Times New Roman,Times">EDUCATION</font></b></h3>
 <ul>
  <li>AnHui University, Sept 2011-July 2015.<br></li>
+</ul>
+  
+<!-------------------------------------------->
+<hr><h3><b><font face="Times New Roman,Times">JOB EXPERIENCE</font></b></h3>
+<ul>
+ <li><a href="http://www.qdsgv.com/">qdsgv</a>, Nov 2018-Up to now.<br></li>
+ <li><a href="http://www.racobit.com/">racobit</a>, July 201５-Oct 2018.<br></li>
 </ul>
 
 <!-------------------------------------------->
