--- a/personal_homepage.html
+++ b/personal_homepage.html
@@ -10,7 +10,9 @@
 
     <td>
       <h2 align=left>John Ma</h2>
-      <b>Embedded Software Engineer<br>BeiJing China<br>
+      <b>Embedded Software Engineer<br>
+      Working BeiJing China<br>
+      Place of birth：Shanxi Province<br>
       <i>Email</i>: <a href="maqiang6056@126.com"><u>maqiang6056@126.com</u></a><br>
     </td>
   </tr>
