--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <!-- saved from url=(0020)http://johnmaq.github.io -->
-<HTML><HEAD><TITLE>Oldlinux.org -- Linux plinux - Early Linux Kernel Analysis and Comments</TITLE>
+<HTML><HEAD><TITLE>Oldlinux - Early Linux Kernel Analysis and Comments</TITLE>
 <META content="text/html; charset=gb2312" http-equiv=content-type>
 <META name=keywords content="Oldlinux, plinux, ulinux, glinux, tlinux, linuxdb">
 <META name=keywords content="Ancient Linux, kernel sourcecode analysis">
@@ -9,7 +9,7 @@
 </HEAD>
 <BODY>
 <CENTER>
-<H1><B><FONT face="Times New Roman, Times">Welcome to Linux-Kernel-v0.12 
+<H1><B><FONT face="Times New Roman, Times">Welcome to Linux-Kernel 
 </B></H1></CENTER>
 <HR>
 
@@ -45,5 +45,20 @@
         href="personal_homepage.html">personal homepage</A> -- 
         My personal webpage [ Obsoleted ... ]</LI></UL>
       <HR>
+	<!-------------------------------------------->
+	<hr><h3><b><font face="Times New Roman,Times">RESOURCES</font></b></h3>
+	<ul>
+ 	<li><a href="http://www.oldlinux.org/Linux.old/">oldlinux kernel reference</a><br></li>
+ 	<li><a href="https://mirrors.edge.kernel.org/pub/linux/kernel/">oldlinux kernel source code</a><br></li>
+	<li><a href="http://intel80386.com/386htm/toc.htm">Intel 80386 Reference Programmer's Manual</a><br></li>
+	<li><a href="https://software.intel.com/sites/default/files/managed/39/c5/325462-sdm-vol-1-2abcd-3abcd.pdf">A-32 Intel Architecture Software Developer's Manual Volume.3:System Programming Guide</a><br></li>
+	<li><a href="https://svce.ac.in/departments/cse/NOTES/CS23041.pdf">System Software: An Introduction to Systems Programming</a><br></li>
+	<li><a href="http://academy.delmar.edu/Courses/ITSC1358/eBooks/Linux%28gcc%29.pdf">Using and Porting the GNU Compiler Collection</a><br></li>
+	<li><a href="http://tldp.org/LDP/tlk/tlk.html">The Linux Kernel</a><br></li>
+ 	<li><a href="https://www.cs.virginia.edu/~clc5q/gcc-inline-asm.pdf">Using Inline Assembly with gcc</a><br></li>
+	<li><a href="http://oldlinux.org/Linux.old/Ref-docs/ld.pdf">Using ld</a><br></li>
+	<li><a href="http://www.zap.org.au/elec2041-cdrom/gnutools/doc/gnu-assembler.pdf">Using as: The GNU Assembler</a><br></li>
+	<li><a href="https://pan.baidu.com/s/1e228jcdf6Ly9R1kaqeceRA">深入理解计算机系统</a><br></li>
+	</ul>
 </FONT></BODY></HTML>
 
