--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         href="personal_homepage.html">personal homepage</A> -- 
         My personal webpage [ Obsoleted ... ]</LI></UL>
       <HR>
-	<!-------------------------------------------->
+	
 	<hr><h3><b><font face="Times New Roman,Times">RESOURCES</font></b></h3>
 	<ul>
- 	<li><a href="http://www.oldlinux.org/Linux.old/">oldlinux kernel reference</a><br></li>
- 	<li><a href="https://mirrors.edge.kernel.org/pub/linux/kernel/">oldlinux kernel source code</a><br></li>
+ 	<li><a href="http://www.oldlinux.org/Linux.old/">Oldlinux kernel reference</a><br></li>
+ 	<li><a href="https://mirrors.edge.kernel.org/pub/linux/kernel/">Oldlinux kernel source code</a><br></li>
 	<li><a href="http://intel80386.com/386htm/toc.htm">Intel 80386 Reference Programmer's Manual</a><br></li>
 	<li><a href="https://software.intel.com/sites/default/files/managed/39/c5/325462-sdm-vol-1-2abcd-3abcd.pdf">A-32 Intel Architecture Software Developer's Manual Volume.3:System Programming Guide</a><br></li>
 	<li><a href="https://svce.ac.in/departments/cse/NOTES/CS23041.pdf">System Software: An Introduction to Systems Programming</a><br></li>
