--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </B></H1></CENTER>
 <HR>
 
-<H3><B><FONT face="Times New Roman, Times">SITE TARGETS</FONT></B></H3>
+<H3><B><FONT face="Times New Roman, Times">ORIGINAL BOOK/FONT></B></H3>
       <UL>
         <LI>Collect all the materials related to the ancient Linux for historic 
         testimony; 
@@ -22,7 +22,7 @@
         <LI>Provide an easiest way to learn the basics of Linux for newbies; 
         <LI>For fun </LI></UL>
       <HR>
-      <BR>
+<H3><B><FONT face="Times New Roman, Times">SITE TARGETS</FONT></B></H3>
       <UL>
         <LI>An old paper written by Linus: <A 
         href="http://www.oldlinux.org/Linus/index.html">"Linux--a free unix-386 
@@ -32,7 +32,7 @@
         href="http://www.oldlinux.org/book.html">"A Heavily Commented Linux kernel 
         Source Code (Kernel 0.11)"</A> </LI></UL>
       <HR>
-      <BR>
+
       <H3><B><FONT face="Times New Roman, Times">MAIN MENU</FONT></B></H3>
       <UL>
         <LI>Forum is now closed temporarily due to the security problems of the site. It will be opened again when the forum upgraded.
