--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         My personal webpage [ Obsoleted ... ]</LI></UL>
       <HR>
 	
-	<hr><h3><b><font face="Times New Roman,Times">RESOURCES</font></b></h3>
+	<h3><b><font face="Times New Roman,Times">RESOURCES</font></b></h3>
 	<ul>
  	<li><a href="http://www.oldlinux.org/Linux.old/">Oldlinux kernel reference</a><br></li>
  	<li><a href="https://mirrors.edge.kernel.org/pub/linux/kernel/">Oldlinux kernel source code</a><br></li>
