--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <META name=keywords content="Oldlinux, plinux, ulinux, glinux, tlinux, linuxdb">
 <META name=keywords content="Ancient Linux, kernel sourcecode analysis">
 <META name=GENERATOR content="MSHTML 9.00.8112.16450">
-<link rel="stylesheet" href="/oldlinux.css" type="text/css" />
+<link rel="shortcut icon" href="https:johnmaq.github.io/favicon.ico" />
 </HEAD>
 <BODY>
 <CENTER>
