--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <!-- saved from url=(0020)http://johnmaq.github.io -->
-<HTML><HEAD><TITLE>Oldlinux - Early Linux Kernel Analysis and Comments</TITLE>
+<HTML><HEAD><TITLE>Linux Kernel - Early Linux Kernel Analysis and Comments</TITLE>
 <META content="text/html; charset=gb2312" http-equiv=content-type>
-<META name=keywords content="Oldlinux, plinux, ulinux, glinux, tlinux, linuxdb">
-<META name=keywords content="Ancient Linux, kernel sourcecode analysis">
-<META name=GENERATOR content="MSHTML 9.00.8112.16450">
+<META name=keywords content="Oldlinux">
+<META name=keywords content="Linux, kernel sourcecode analysis">
 <link rel="shortcut icon" href="https:johnmaq.github.io/favicon.ico" />
 </HEAD>
 <BODY>
