--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 	<li><a href="http://oldlinux.org/Linux.old/Ref-docs/ld.pdf">Using ld</a><br></li>
 	<li><a href="http://www.zap.org.au/elec2041-cdrom/gnutools/doc/gnu-assembler.pdf">Using as: The GNU Assembler</a><br></li>
 	<li><a href="https://pan.baidu.com/s/1e228jcdf6Ly9R1kaqeceRA">深入理解计算机系统</a><br></li>
+	<li><a href="Linux-0.11内核源代码注释.pdf">Linux-0.11内核源代码注释</a><br></li>
 	</ul>
 </FONT></BODY></HTML>
 
