--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 	<li><a href="http://www.zap.org.au/elec2041-cdrom/gnutools/doc/gnu-assembler.pdf">Using as: The GNU Assembler</a><br></li>
 	<li><a href="https://pan.baidu.com/s/1e228jcdf6Ly9R1kaqeceRA">深入理解计算机系统</a><br></li>
 	<li><a href="Linux-0.11内核源代码注释.pdf">Linux-0.11内核源代码注释</a><br></li>
+	<li><a href="http://infocenter.arm.com/help/index.jsp">x86 Architecture Document</a><br></li>
+	<li><a href="https://www.intel.cn/content/www/cn/zh/support/articles/000006715/processors.html?wapkw=ia-32">ARM Architecture Document</a><br></li>
 	</ul>
 </FONT></BODY></HTML>
 
