--- a/index.html
+++ b/index.html
@@ -62,5 +62,11 @@
 	<li><a href="http://infocenter.arm.com/help/index.jsp">x86 Architecture Document</a><br></li>
 	<li><a href="https://www.intel.cn/content/www/cn/zh/support/articles/000006715/processors.html?wapkw=ia-32">ARM Architecture Document</a><br></li>
 	</ul>
+	<HR>
+	
+	<h3><b><font face="Times New Roman,Times">LEARN ARCHIVE</font></b></h3>
+	<ul>
+ 	<li><a href="learn_record/">learn-archive</a><br></li>
+	</ul>
 </FONT></BODY></HTML>
 
