--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	
 	<h3><b><font face="Times New Roman,Times">LEARN ARCHIVE</font></b></h3>
 	<ul>
- 	<li><a href="learn_record/">learn-archive</a> --- Do some learn archive for early or old linux kernel<br></li>
+ 	<li><a href="https://johnmaq.github.io/learn_record/">learn-archive</a> --- Do some learn archive for early or old linux kernel<br></li>
 	</ul>
 </FONT></BODY></HTML>
 
