--- a/personal_homepage.html
+++ b/personal_homepage.html
@@ -22,7 +22,7 @@
 <hr>
   <p>Welcome to my personal homepage! or mainly as a resume.<br>
  I am a Embedded Software Engineer at
-  <a href="http://www.qdsgv.com/">qdsgv</a>, BeiJing China.<br>
+  <a href="https://www.uniontech.com/">uniontech</a>, BeiJing China.<br>
   I graduated in July 2015 with a Bachelor Degree from the 
   Communication engineering at
   <a href="http://www.ahu.edu.cn/">Anhui University</a>.</p>
@@ -36,7 +36,7 @@
 <!-------------------------------------------->
 <hr><h3><b><font face="Times New Roman,Times">JOB EXPERIENCE</font></b></h3>
 <ul>
- <li><a href="https://www.uniontech.com/">Uniontech</a>, Dec 2020-Up to now.<br></li>
+ <li><a href="https://www.uniontech.com/">uniontech</a>, Dec 2020-Up to now.<br></li>
  <li><a href="http://www.yunchongba.com/">yunchongba</a>, Nov 2019-Dec 2020.<br></li>
  <li><a href="http://www.qdsgv.com/">qdsgv</a>, Nov 2018-Oct 2019<br></li>
  <li><a href="http://www.racobit.com/">racobit</a>, July 2015-Oct 2018.<br></li>
