--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 	<li><a href="https://www.intel.cn/content/www/cn/zh/support/articles/000006715/processors.html?wapkw=ia-32">ARM Architecture Document</a><br></li>
 	<li><a href="https://github.com/johnmaq/johnmaq.github.io/blob/slave/devicetree-specification-v0.2.pdf">devicetree-specification-v0.2</a><br></li>
 	<li><a href="http://www.wowotech.net/">蜗窝科技</a><br></li>
+	<li><a href="http://www.biscuitos.cn/blog/">BiscuitOS博客</a><br></li>
 	</ul>      
 	<HR>
 	
